2014-05-08 Matt:
	* Adding some code sketching out GeoMessenger and how to check objects in volumes.

2014-05-06 Matt:
	* Adding geometry directory structure and ChangeLog