@@ -1,3 +1,7 @@
+2014-05-21 Matt:
+	* Repurposing this package
+	* Removing Geometry package
+
 2014-05-08 Matt:
 	* Adding some code sketching out GeoMessenger and how to check objects in volumes.
 
